Fix the input section!

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <input
         type="text"
         placeholder="Enter GitHub username"
-        class="flex-grow px-4 py-2 bg-background text-text border border-border rounded-lg placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-accent"
+        class=" lg: flex-grow sm: px-4 py-2 bg-background text-text border border-border rounded-lg placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-accent"
       />
      <input type="submit" value="Search"  class="px-5 py-2 bg-accent text-white font-medium rounded-lg hover:bg-blue-500 transition">
     </div>
